# adventofcode

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
2017/: .flake8  pyproject.toml
2017/aoc/: __main__.py  helpers.py  registry.py
2017/aoc/day1/: main.py
2017/aoc/day10/: main.py
2017/aoc/day14/: main.py
2017/aoc/day8/: main.py
2017/aoc/days/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2017/src/day12/: main.py
2017/src/day13/: main.py
2017/src/day4/: main.py
2017/src/day9/: main.py
2018/day1/: Main.hs
2018/day2/: Main.hs
2020/: Makefile  README.md
2020/1/: main.go
2020/2/: main.go
2020/3/: main.go
2020/4/: input.txt  main.go
2020/5/: main.go
2020/6/: main.go
2020/7/: input.txt  main.go
2021/: Cargo.toml  Makefile
2021/src/: main.rs  registry.rs  utils.rs
2021/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  template.rs
2022/: Cargo.toml
2022/src/: main.rs
2022/src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
2023/: Cargo.toml
2023/src/: main.rs  registry.rs
2023/src/days/: day1.rs  day2.rs
python_2017/: setup.py
python_2017/aoc/: helpers.py
python_2017/aoc/day1/: main.py
python_2017/aoc/day10/: main.py
python_2017/aoc/day11/: main.py
stubs/aoc/: helpers.pyi
(+11 files in other folders)
